# CandyCrisis

./: .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  CandyCrisis.cpp  CandyCrisis.dev  CandyCrisis.rc  CandyCrisis.sln  CandyCrisis.vcxproj  CandyCrisis.vcxproj.filters  CandyCrisisReadMe.rtf  Crisis.rc  CrisisGen.dev  Inno.iss  MTypes.cpp  MTypes.h  README.md  Resource.h  SDLU.h  _README_.txt  blitter.h  build.py  font.cpp  font.h  gameticks.cpp  graphics.cpp  graphics.h  graymonitor.cpp  hiscore.cpp  keyselect.cpp  keyselect.h  level.cpp  main.h  moving.h  music.cpp  music.h  next.cpp  next.h  opponent.cpp  pause.cpp  (+11 more)
.github/workflows/: CompileCheck.yml  metarelease.yml  release-aarch64.yml  release-appimage-aarch64.yml  release-appimage-x86_64.yml  release-appimage.yml  release-mac.yml  release-windows.yml  release.yml
CandyCrisisResources/: Preferences.txt  mod_128  mod_129  mod_130  mod_131  mod_132.s3m  mod_133  mod_134  mod_135  mod_137  mod_138  mod_141.mod  mod_142
FMOD/lib/: fmodex64_vc.lib  fmodexL64_vc.lib  fmodexL_lcc.lib  fmodexL_vc.lib  fmodex_lcc.lib
SDL_main/: SDL_main.c
Source/: MTypes.cpp  MTypes.h  Makefile  RegAlgorithm.cpp  RegAlgorithm.h  RegGenerator.cpp  SDLU.cpp  SDLU.h  blitter.cpp  blitter.h  control.cpp  control.h  fmodmusic.cpp  fmodsoundfx.cpp  font.cpp  font.h  gameticks.cpp  gameticks.h  graphics.cpp  graphics.h  graymonitor.cpp  graymonitor.h  grays.cpp  grays.h  gworld.cpp  gworld.h  hiscore.cpp  hiscore.h  keyselect.cpp  keyselect.h  level.cpp  level.h  main.cpp  main.h  music.h  next.cpp  next.h  opponent.cpp  pause.cpp  pause.h  (+13 more)
packaging/: CandyCrisis.exe.rc  ReadMe.txt.in  app.exe.rc  app.icns  candycrisis.desktop  gon-config.json  prepare_appimage_appdir.sh
src/: CandyCrisis.cpp  MTypes.c  MTypes.cpp  MTypes.h  SDLU.c  SDLU.cpp  SDLU.h  blitter.c  blitter.cpp  control.c  control.cpp  control.h  font.c  font.cpp  gameticks.c  gameticks.cpp  gameticks.h  graphics.c  graphics.cpp  graymonitor.c  grays.cpp  grays.h  gworld.c  gworld.cpp  gworld.h  hiscore.c  hiscore.cpp  hiscore.h  keyselect.c  keyselect.cpp  level.c  level.cpp  level.h  main.c  main.cpp  main.h  moving.cpp  music.c  music.cpp  music.h  (+36 more)
src/support/: ModStream.cpp  ModStream.h  cmixer.c  cmixer.cpp  cmixer.h  ibxm.c  ibxm.h
